dev/open-webui/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web
  namespace: open-webui
  annotations:
    external-dns.alpha.kubernetes.io/target: 202.215.58.76
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`owui.mtaku3.com`)
      kind: Rule
      services:
        - name: open-webui
          port: http
  tls:
    secretName: web-tls-cert
